@@ -30,6 +30,7 @@ Views 6.x-3.x-dev
     o #630430 by cafuego: Fix typo in argument text.
     o #635966 by dagmar: Allow the exposed form plugin to actually control the exposed form.
     o #370651: Make Views AJAX work with mod_security enabled.
+    o #614040 by dereine: Introduce hook_views_plugins_alter()
 
 Views 6.x-3.0-alpha1
   Bugs fixed
